# retailys

./: README.md  docker-compose.yaml
fastapi/: Dockerfile  pyproject.toml
fastapi/.devcontainer/: devcontainer.json
fastapi/retailys/: astra.py  main.py
fastapi/retailys/tests/: test_astra.py
svelte/: .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json
svelte/.devcontainer/: devcontainer.json
svelte/src/: app.css
svelte/src/routes/: +page.server.ts
svelte/src/routes/details/[code]/: +page.server.ts  +page.svelte
svelte/src/routes/items/[[page]]/: +page.server.ts  +page.svelte
