[tool.poetry]
name = "retailys"
version = "0.1.0"
description = ""
authors = ["Radek Stibora <hello@radekstibora.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
aiohttp = "^3.8.3"
redis = {extras = ["hiredis"], version = "^4.4.2"}
pydantic = "^1.10.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
